kubernetes/infrastructure/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
  namespace: infrastructure
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
#    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: dns.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home
                port:
                  number: 80
  tls:
    - hosts:
        - dns.truxonline.com
      secretName: adguard-tls
